# hkn-officer-tracker

./: .gitignore  HKN Officer Requirement Tracking.ipynb  README.md  attendance-tracker.py  environment.yml  pyproject.toml  slackbot.py
hkn_officer_tracker/: __init__.py  slackbot.py
